Updated HW10-HW14, PT07-PT14.

--- a/Урок 07-09. Введение в Python/Python - PT07.html
+++ b/Урок 07-09. Введение в Python/Python - PT07.html
@@ -42,8 +42,8 @@ unless you do.</code></pre>
       <div class="right-rect">
         <h2>Практическое Задание 7.3</h2>
         <p>Выведите в консоль одной строкой <code class="python"><b>"H-E-L-L-O W*O*R*L*D"</b></code>, используя два
-          <code class="python"><b>print</b></code>, <code class="python"><b>sep</b></code> и <code
-            class="python"><b>end</b></code>.
+          <code class="python"><b>print</b></code>, <code><span class="keyword-argument"><b>sep</b></span></code> и
+          <code><span class="keyword-argument"><b>end</b></span></code>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
