--- a/Урок 10-14. Операторы ветвлений/Python - HW10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW10.html
@@ -7,165 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #343434 0%, #363636 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .copy-button {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      padding: 5px 10px;
-      background-color: #FFC000;
-      color: #1E1F22;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-family: "JetBrains mono", monospace;
-      font-weight: bold;
-    }
-
-    .string {
-      color: #6AAB73;
-    }
-
-    .string-bracket,
-    .string-esc,
-    .keyword {
-      color: #CF8E6D;
-    }
-
-    .self {
-      color: #94558D;
-    }
-
-    .string-bracket-inner {
-      color: #BCBEC4;
-    }
-
-    .number {
-      color: #2AACB8;
-    }
-
-    .comments {
-      color: #7A7E85;
-    }
-
-    .metadata {
-      color: #B3AE60;
-    }
-
-    .built-in {
-      color: #8888C6;
-    }
-
-    .function {
-      color: #56A8F5;
-    }
-
-    .special-names {
-      color: #B200B2;
-    }
-
-    .keyword-argument {
-      color: #AA4926;
-    }
-
-    ul {
-      margin-top: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/hw.css">
 </head>
 
 <body>
@@ -194,10 +36,10 @@
         <p>Выбран <span class="hl-text">пункт 1</span>:
         <ul>
           <li>Программа <span class="hl-text">запрашивает с консоли расстояние в км</span>.</li>
-          <li>Вычисляет <span class="hl-text">затраченное время автомобиля на указанное расстояние</span>.</li>
-          <li>Выводит в консоль <span class="string"><b>"На расстояние в <span class="number">{число}</span> км
-                автомобиль со скоростью <span class="number">{число}</span> км/ч потратит часов: <span
-                  class="number">{число}</span>"</b></span>.</li>
+          <li>Вычисляет <span class="hl-text">затраченное время автомобиля за указанное расстояние</span>.</li>
+          <li>Выводит в консоль <code
+              class="python"><b>"На расстояние в {число} км автомобиль со скоростью {число} км/ч потратит часов: {число}"</b></code>.
+          </li>
         </ul>
         </p>
 
@@ -205,9 +47,9 @@
         <ul>
           <li>Программа <span class="hl-text">запрашивает с консоли время в часах</span>.</li>
           <li>Вычисляет <span class="hl-text">расстояние за указанное время</span>.</li>
-          <li>Выводит в консоль <span class="string"><b>"За часов <span class="number">{число}</span> автомобиль со
-                скоростью <span class="number">{число}</span> км/ч пройдёт км: <span
-                  class="number">{число}</span>"</b></span>.</li>
+          <li>Выводит в консоль <code
+              class="python"><b>"За часов {число} автомобиль со скоростью {число} км/ч пройдёт км: {число}"</b></code>.
+          </li>
         </ul>
         </p>
 
@@ -227,7 +69,7 @@
       <div class="right-rect">
         <h2>Домашнее Задание 10.2</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли
-            <code><span class="number"><b>5</b></span></code> чисел</span> и <span class="hl-text">выводит в консоль
+            <code class="python"><b>5</b></code> чисел</span> и <span class="hl-text">выводит в консоль
             максимальное число</span>. Не используйте вложенные условные конструкции.</p>
 
         <h3>Подсказка:</h3>
@@ -259,12 +101,11 @@
         <h2>Домашнее Задание 10.4</h2>
         <p><span class="hl-text">Teston Lebra</span> снимает в аренду квартиру. Арендодатель сообщил, что если <span
             class="hl-text">Teston</span> сразу оплатит вперёд за несколько месяцев, то получит скидку. За
-          <code><span class="number"><b>6</b></span></code>+ месяцев скидка
-          <code><span class="number"><b>5%</b></span></code>, за <code><span class="number"><b>12</b></span></code>+
-          месяцев - <code><span class="number"><b>10%</b></span></code>, за
-          <code><span class="number"><b>24</b></span></code>+ месяца -
-          <code><span class="number"><b>15%</b></span></code>. Напишите программу, которая <span
-            class="hl-text">запрашивает с консоли стоимость аренды в месяц</span> и <span class="hl-text">количество
+          <code class="python"><b>6</b></code>+ месяцев скидка <code class="python"><b>5%</b></code>, за <code
+            class="python"><b>12</b></code>+ месяцев – <code class="python"><b>10%</b></code>, за
+          <code class="python"><b>24</b></code>+ месяца – <code class="python"><b>15%</b></code>. Напишите программу,
+          которая <span class="hl-text">запрашивает с консоли стоимость аренды в месяц</span> и <span
+            class="hl-text">количество
             месяцев проживания</span>, затем <span class="hl-text">выводит в консоль стоимость оплаты аренды с учётом
             скидки</span>.
         </p>
@@ -278,7 +119,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.5</h2>
-        <p>На работе <span class="hl-text">Teston Lebra</span> дали задание - определить среднюю температуру за неделю.
+        <p>На работе <span class="hl-text">Teston Lebra</span> дали задание – определить среднюю температуру за неделю.
           При этом нужно определить в какие дни температура была выше средней. Напишите программу, которая <span
             class="hl-text">запрашивает с консоли температуру за каждый день</span> и <span class="hl-text">выводит в
             консоль среднее значение</span> и <span class="hl-text">дни, температура которых была больше средней</span>.
@@ -303,17 +144,17 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.6</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> при оплате корзины запрашиваются несколько данных -
-          скидочный купон, праздник ли сегодня, клиент закупался <code><span class="number"><b>30</b></span></code> дней
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> при оплате корзины запрашиваются несколько данных –
+          скидочный купон, праздник ли сегодня, клиент закупался <code class="python"><b>30</b></code> дней
           подряд в данном магазине. За каждые верные данные клиенту добавляется
-          <code><span class="number"><b>5%</b></span></code> скидка. Напишите программу, которая <span
-            class="hl-text">запрашивает с консоли стоимость корзины</span>, <span class="hl-text">скидочный
+          <code class="python"><b>5%</b></code> скидка. Напишите программу, которая <span class="hl-text">запрашивает с
+            консоли стоимость корзины</span>, <span class="hl-text">скидочный
             купон</span>, <span class="hl-text">ответ на вопрос</span>
-          <code><span class="string"><b>"Сегодня праздник?"</b></span></code>, <span class="hl-text">ответ на
+          <code class="python"><b>"Сегодня праздник?"</b></code>, <span class="hl-text">ответ на
             вопрос</span>
-          <code><span class="string"><b>"Клиент закупался 30 дней подряд в данном магазине"</b></span></code>, затем
+          <code class="python"><b>"Клиент закупался 30 дней подряд в данном магазине"</b></code>, затем
           <span class="hl-text">выводит в консоль итоговую скидку</span> и <span class="hl-text">итоговую стоимость с
-            учётом скидки</span>. Рабочий скидочный купон - <code><span class="number"><b>5869</b></span></code>.
+            учётом скидки</span>. Рабочий скидочный купон – <code class="python"><b>5869</b></code>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -337,8 +178,8 @@
             class="hl-text">выводит в консоль сумму конвертированной валюты</span>.
         </p>
         <p>В начале программы создайте <code class="python"><b>3</b></code> переменные, которые будут хранить курсы
-          конвертации - <code><b>AZN -&gt RUB</b></code>, <code><b>AZN -&gt USD</b></code>,
-          <code><b>RUB -&gt USD</b></code>. Задайте им любой курс и используйте их в программе.
+          конвертации – <code class="python"><b>AZN -> RUB</b></code>, <code class="python"><b>AZN -> USD</b></code>,
+          <code class="python"><b>RUB -> USD</b></code>. Задайте им любой курс и используйте их в программе.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -363,7 +204,7 @@ AZN -> RUB
         <h2>Домашнее Задание 10.8</h2>
         <p><span class="hl-text">Teston Lebra</span> попросили написать программу, которая запрашивает с консоли
           трёхзначный код HTTP и выводит в консоль статус словами по первой цифре. Если вводится число не в диапазоне
-          [<code><span class="number"><b>100</b></span></code>, <code><span class="number"><b>599</b></span></code>], то
+          [<code class="python"><b>100</b></code>, <code class="python"><b>599</b></code>], то
           выводится ошибка ввода. Он написал программу, но она не работает. <span class="hl-text">Исправьте программу
             так, чтобы она работала верно, и рядом напишите комментарии о том, почему изменённый вариант должен работать
             верно</span>.</p>
@@ -441,10 +282,10 @@ if choice == "2":
       <div class="right-rect">
         <h2>Домашнее Задание 10.10</h2>
         <p><span class="hl-text">Teston Lebra</span> попросили написать прототип программы, которая запрашивает с
-          консоли <code><span class="number"><b>16</b></span></code>-значный номер карты, месяц, год и CVV/CVC, затем
+          консоли <code class="python"><b>16</b></code>-значный номер карты, месяц, год и CVV/CVC, затем
           программа сверяет данные с тестовыми и выводит в консоль
-          <code><span class="string"><b>"Операция проведена успешно."</b></span></code> или
-          <code><span class="string"><b>"Ошибка ввода."</b></span></code>. Он написал программу, но она работает
+          <code class="python"><b>"Операция проведена успешно."</b></code> или
+          <code class="python"><b>"Ошибка ввода."</b></code>. Он написал программу, но она работает
           неверно. <span class="hl-text">Исправьте программу так, чтобы она работала верно только с тестовыми
             данными</span>. Остальные данные должны приводить к ошибке ввода, и <span class="hl-text">рядом напишите
             комментарии о том, почему изменённый вариант должен работать верно</span>.
@@ -497,97 +338,6 @@ if check_success != 4:
       </div>
     </div>
   </div>
-  <script>
-    function copyCode(button) {
-      var codeBlock = button.nextElementSibling.querySelector('code');
-      var range = document.createRange();
-      range.selectNode(codeBlock);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-      document.execCommand('copy');
-      window.getSelection().removeAllRanges();
-      changeCopyButton(button);
-    }
-
-    function changeCopyButton(button) {
-      var originalHTML = button.innerHTML;
-      button.innerHTML = `
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
-    `;
-      setTimeout(function () {
-        button.innerHTML = originalHTML;
-      }, 2000);
-    }
-    document.addEventListener('DOMContentLoaded', function () {
-      const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function (codeBlock, index) {
-        let innerHTML = codeBlock.innerHTML;
-        console.log(index, innerHTML);
-        // STRING
-        let regex = /(?<!\\)(f?"[^"\\]*(?:\\.[^"\\]*)*")/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        regex = /(?<!\\)(f?'[^'\\]*(?:\\.[^'\\]*)*')/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        // KEYWORD CLASS
-        regex = /(class)(?!=)/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORDS
-        const keywords = [
-          'def', 'for', 'in', 'while', 'and', 'or', 'not',
-          'if', 'elif', 'else', 'continue', 'break', 'try', 'with',
-          'as', 'except', 'finally', 'return', 'True', 'False', 'from', 'import'
-        ];
-        regex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'g');
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORD NUMBER
-        regex = /\b\d+(\.\d+)?/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="number">${match}</span>`;
-        });
-        // STRING-ESC
-        regex = /\\./g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string-esc">${match}</span>`;
-        });
-        // COMMENTS
-        regex = /(#.*$)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="comments">${match}</span>`;
-        });
-        // METADATA
-        regex = /^(\s*@\w+)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="metadata">${match}</span>`;
-        });
-        // SELF
-        regex = /\bself\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="self">${match}</span>`;
-        });
-        // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max)\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="built-in">${match}</span>`;
-        });
-        // FUNCTION
-        regex = /(<span class="keyword">def<\/span>)\s(\w+)\(/g;
-        innerHTML = innerHTML.replace(regex, '$1 <span class="function">$2</span>(');
-        // SPECIAL-NAMES
-        regex = /(<span class="function">)(__\w+__)(<\/span>)/g;
-        innerHTML = innerHTML.replace(regex, '$1<span class="special-names">$2</span>$3');
-        // KEYWORD-ARGUMENT
-        regex = /, (end|sep)=/g;
-        innerHTML = innerHTML.replace(regex, ', <span class="keyword-argument">$1</span>=');
-        codeBlock.innerHTML = innerHTML
-      });
-    });
-  </script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
