--- a/Урок 10-14. Операторы ветвлений/Python - HW12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW12.html
@@ -7,165 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #343434 0%, #363636 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .copy-button {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      padding: 5px 10px;
-      background-color: #FFC000;
-      color: #1E1F22;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-family: "JetBrains mono", monospace;
-      font-weight: bold;
-    }
-
-    .string {
-      color: #6AAB73;
-    }
-
-    .string-bracket,
-    .string-esc,
-    .keyword {
-      color: #CF8E6D;
-    }
-
-    .self {
-      color: #94558D;
-    }
-
-    .string-bracket-inner {
-      color: #BCBEC4;
-    }
-
-    .number {
-      color: #2AACB8;
-    }
-
-    .comments {
-      color: #7A7E85;
-    }
-
-    .metadata {
-      color: #B3AE60;
-    }
-
-    .built-in {
-      color: #8888C6;
-    }
-
-    .function {
-      color: #56A8F5;
-    }
-
-    .special-names {
-      color: #B200B2;
-    }
-
-    .keyword-argument {
-      color: #AA4926;
-    }
-
-    ul {
-      margin-top: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/hw.css">
 </head>
 
 <body>
@@ -183,29 +25,27 @@
       <div class="right-rect">
         <h2>Домашнее Задание 12.1</h2>
         <p>В компании, где работает <span class="hl-text">Teston Lebra</span>, все сотрудники имеют балл
-          производительности от <code><span class="number"><b>1</b></span></code> до
-          <code><span class="number"><b>99</b></span></code> включительно. Напишите программу, которая <span
+          производительности от <code class="python"><b>1</b></code> до
+          <code class="python"><b>99</b></code> включительно. Напишите программу, которая <span
             class="hl-text">запрашивает с консоли балл</span> и <span class="hl-text">выводит в консоль
             категорию</span>.
         </p>
         <p>Категории следующие:
         <ul>
-          <li><span class="hl-text"><b>"A":</b></span> более <code><span class="number"><b>90</b></span></code>
-            баллов.</li>
-          <li><span class="hl-text"><b>"B":</b></span> От <code><span class="number"><b>80</b></span></code> до
-            <code><span class="number"><b>90</b></span></code> баллов включительно.
+          <li><span class="hl-text"><b>"A":</b></span> более <code class="python"><b>90</b></code> баллов.</li>
+          <li><span class="hl-text"><b>"B":</b></span> От <code class="python"><b>80</b></code> до <code
+              class="python"><b>90</b></code> баллов включительно.
           </li>
-          <li><span class="hl-text"><b>"C":</b></span> От <code><span class="number"><b>70</b></span></code> до
-            <code><span class="number"><b>79</b></span></code> баллов включительно.
+          <li><span class="hl-text"><b>"C":</b></span> От <code class="python"><b>70</b></code> до <code
+              class="python"><b>80</b></code> баллов включительно.
           </li>
-          <li><span class="hl-text"><b>"D":</b></span> От <code><span class="number"><b>60</b></span></code> до
-            <code><span class="number"><b>69</b></span></code> баллов включительно.
+          <li><span class="hl-text"><b>"D":</b></span> От <code class="python"><b>60</b></code> до <code
+              class="python"><b>70</b></code> баллов включительно.
           </li>
-          <li><span class="hl-text"><b>"E":</b></span> От <code><span class="number"><b>50</b></span></code> до
-            <code><span class="number"><b>59</b></span></code> баллов.
+          <li><span class="hl-text"><b>"E":</b></span> От <code class="python"><b>50</b></code> до <code
+              class="python"><b>60</b></code> баллов.
           </li>
-          <li><span class="hl-text"><b>"F":</b></span> Менее <code><span class="number"><b>50</b></span></code>
-            баллов.</li>
+          <li><span class="hl-text"><b>"F":</b></span> Менее <code class="python"><b>50</b></code> баллов.</li>
         </ul>
         </p>
         <h3>Пример работы в консоли:</h3>
@@ -219,12 +59,11 @@
         <h2>Домашнее Задание 12.2</h2>
         <p><span class="hl-text">Teston Lebra</span> попросили переписать свой прототип программы входа по логину и
           паролю. Программа должна выводить в консоль
-          <code><span class="string"><b>"Вход выполнен успешно."</b></span></code>, если логин –
-          <code><span class="string"><b>"admin"</b></span></code>, а пароль –
-          <code><span class="string"><b>"5869"</b></span></code> или же логин –
-          <code><span class="string"><b>"root"</b></span></code>, а пароль –
-          <code><span class="string"><b>"1002"</b></span></code>. В противном случае программа должна выводить в консоль
-          <code><span class="string"><b>"Неверный логин или пароль."</b></span></code>. Напишите программу, которая
+          <code class="python"><b>"Вход выполнен успешно."</b></code>, если логин – <code
+            class="python"><b>"admin"</b></code>, а пароль – <code class="python"><b>"5869"</b></code> или же логин –
+          <code class="python"><b>"root"</b></code>, а пароль – <code class="python"><b>"1002"</b></code>. В противном
+          случае программа должна выводить в консоль
+          <code class="python"><b>"Неверный логин или пароль."</b></code>. Напишите программу, которая
           <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span
             class="hl-text">выводит в консоль ответ</span>.
         </p>
@@ -244,10 +83,10 @@
         <ul>
           <li>Клиент должен быть <span class="hl-text">участником бонусной программы</span> или <span
               class="hl-text">совершить
-              покупку на сумму более</span> <code><span class="number"><b>300</b></span></code>.</li>
+              покупку на сумму более</span> <code class="python"><b>300</b></code>.</li>
           <li>Покупка должна быть совершена в <span class="hl-text">рабочий день</span>, за исключением случаев, когда
             <span class="hl-text">сумма покупки превышает ещё более высокий порог в сумму</span>
-            <code><span class="number"><b>1000</b></span></code>, что позволяет получить бонус также и в выходные.
+            <code class="python"><b>1000</b></code>, что позволяет получить бонус также и в выходные.
           </li>
           <li>Клиент не должен иметь <span class="hl-text">неоплаченных задолженностей</span>.</li>
         </ul>
@@ -256,8 +95,8 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли подтверждение участника</span>, <span
             class="hl-text">сумму покупки</span>, <span class="hl-text">подтверждение рабочего дня</span>, <span
             class="hl-text">наличие задолженности</span>, а затем <span class="hl-text">выводит в консоль</span>
-          <code><span class="string"><b>"Клиент может получить бонус."</b></span></code> или
-          <code><span class="string"><b>"Клиент не выполнил условия для получения бонуса."</b></span></code>.
+          <code class="python"><b>"Клиент может получить бонус."</b></code> или
+          <code class="python"><b>"Клиент не выполнил условия для получения бонуса."</b></code>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -290,8 +129,8 @@
             администратора</span>, <span class="hl-text">подтверждение создателя файла</span>, <span
             class="hl-text">уровень конфиденциальности</span>, <span class="hl-text">уровень доступа</span>, <span
             class="hl-text">подтверждение блокирования файла</span>, затем <span class="hl-text">выводит в
-            консоль</span> <code><span class="string"><b>"Доступ разрешён."</b></span></code> или
-          <code><span class="string"><b>"Доступ запрещён."</b></span></code> в зависимости от условий.
+            консоль</span> <code class="python"><b>"Доступ разрешён."</b></code> или
+          <code class="python"><b>"Доступ запрещён."</b></code> в зависимости от условий.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -310,10 +149,10 @@
           для проведения собеседования или нет.</p>
         <p>Человека можно звать на собеседование, если выполняются следующие критерии:
         <ul>
-          <li>Человеку больше <code><span class="number"><b>21</b></span></code> года.</li>
-          <li>Опыт работы <code><span class="number"><b>24</b></span></code> <span class="hl-text">и более
+          <li>Человеку больше <code class="python"><b>21</b></code> года.</li>
+          <li>Опыт работы <code class="python"><b>24</b></code> <span class="hl-text">и более
               месяцев</span>.</li>
-          <li>При наличии сертификата опыт работы может быть от <code><span class="number"><b>12</b></span></code>
+          <li>При наличии сертификата опыт работы может быть от <code class="python"><b>12</b></code>
             <span class="hl-text">и более месяцев</span>.
           </li>
         </ul>
@@ -355,20 +194,16 @@ else:
           вероятности дождя и выводит в консоль словесную интерпретацию.</p>
         <p>Интерпретация следующая:
         <ul>
-          <li><span class="hl-text"><b>Низкая вероятность:</b></span> до
-            <code><span class="number"><b>30%</b></span></code>
+          <li><span class="hl-text"><b>Низкая вероятность:</b></span> до <code class="python"><b>30%</b></code>
             включительно.
           </li>
-          <li><span class="hl-text"><b>Умеренная вероятность:</b></span> от
-            <code><span class="number"><b>31%</b></span></code> до
-            <code><span class="number"><b>60%</b></span></code> включительно.
+          <li><span class="hl-text"><b>Умеренная вероятность:</b></span> от <code class="python"><b>30%</b></code> до
+            <code class="python"><b>60%</b></code> включительно.
           </li>
-          <li><span class="hl-text"><b>Высокая вероятность:</b></span> от
-            <code><span class="number"><b>61%</b></span></code> до
-            <code><span class="number"><b>80%</b></span></code> включительно.
+          <li><span class="hl-text"><b>Высокая вероятность:</b></span> от <code class="python"><b>60%</b></code> до
+            <code class="python"><b>80%</b></code> включительно.
           </li>
-          <li><span class="hl-text"><b>Очень высокая вероятность:</b></span> от
-            <code><span class="number"><b>81%</b></span></code> и
+          <li><span class="hl-text"><b>Очень высокая вероятность:</b></span> от <code class="python"><b>80%</b></code> и
             выше.
           </li>
         </ul>
@@ -407,24 +242,24 @@ else:
         <h2>Домашнее Задание 12.7</h2>
         <p><span class="hl-text">Teston Lebra</span> написал программу, которая запрашивает с консоли средний балл
           студента, имеются ли долги и рекомендации у студента, возраст студента, затем выводит в консоль
-          <code><span class="string"><b>"Студент может получить стипендию."</b></span></code> или
-          <code><span class="string"><b>"Студент не может получить стипендию."</b></span></code> в зависимости от
+          <code class="python"><b>"Студент может получить стипендию."</b></code> или
+          <code class="python"><b>"Студент не может получить стипендию."</b></code> в зависимости от
           критериев. Критерии подсказал ему преподаватель кафедры дискретной математики.
         </p>
         <p>Интерпретация следующая:
         <ul>
-          <li>Средний балл студента от <code><span class="number"><b>80</b></span></code> <span class="hl-text">и
-              выше</span> или средний балл от <code><span class="number"><b>80</b></span></code> <span class="hl-text">и
+          <li>Средний балл студента от <code class="python"><b>80</b></code> <span class="hl-text">и
+              выше</span> или средний балл от <code class="python"><b>80</b></code> <span class="hl-text">и
               выше</span>, но при этом возраст студента <span class="hl-text">больше</span>
-            <code><span class="number"><b>21</b></span></code> и <span class="hl-text">нет долгов</span> или же возраст
-            студента от <code><span class="number"><b>21</b></span></code> <span class="hl-text">и меньше</span> и <span
+            <code class="python"><b>21</b></code> и <span class="hl-text">нет долгов</span> или же возраст
+            студента от <code class="python"><b>21</b></code> <span class="hl-text">и меньше</span> и <span
               class="hl-text">нет долгов</span>.
           </li>
           <li><span class="hl-text">Нет долгов</span>, при этом <span class="hl-text">есть рекомендация</span> или
             <span class="hl-text">нет долгов</span>.
           </li>
-          <li>Средний балл студента от <code><span class="number"><b>80</b></span></code> <span class="hl-text">и
-              выше</span> или же <span class="hl-text">ниже</span> <code><span class="number"><b>80</b></span></code>.
+          <li>Средний балл студента от <code class="python"><b>80</b></code> <span class="hl-text">и
+              выше</span> или же <span class="hl-text">ниже</span> <code class="python"><b>80</b></code>.
           </li>
         </ul>
         </p>
@@ -463,97 +298,6 @@ else:
       </div>
     </div>
   </div>
-  <script>
-    function copyCode(button) {
-      var codeBlock = button.nextElementSibling.querySelector('code');
-      var range = document.createRange();
-      range.selectNode(codeBlock);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-      document.execCommand('copy');
-      window.getSelection().removeAllRanges();
-      changeCopyButton(button);
-    }
-
-    function changeCopyButton(button) {
-      var originalHTML = button.innerHTML;
-      button.innerHTML = `
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
-    `;
-      setTimeout(function () {
-        button.innerHTML = originalHTML;
-      }, 2000);
-    }
-    document.addEventListener('DOMContentLoaded', function () {
-      const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function (codeBlock, index) {
-        let innerHTML = codeBlock.innerHTML;
-        console.log(index, innerHTML);
-        // STRING
-        let regex = /(?<!\\)(f?"[^"\\]*(?:\\.[^"\\]*)*")/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        regex = /(?<!\\)(f?'[^'\\]*(?:\\.[^'\\]*)*')/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        // KEYWORD CLASS
-        regex = /(class)(?!=)/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORDS
-        const keywords = [
-          'def', 'for', 'in', 'while', 'and', 'or', 'not',
-          'if', 'elif', 'else', 'continue', 'break', 'try', 'with',
-          'as', 'except', 'finally', 'return', 'True', 'False', 'from', 'import'
-        ];
-        regex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'g');
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORD NUMBER
-        regex = /\b\d+(\.\d+)?/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="number">${match}</span>`;
-        });
-        // STRING-ESC
-        regex = /\\./g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string-esc">${match}</span>`;
-        });
-        // COMMENTS
-        regex = /(#.*$)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="comments">${match}</span>`;
-        });
-        // METADATA
-        regex = /^(\s*@\w+)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="metadata">${match}</span>`;
-        });
-        // SELF
-        regex = /\bself\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="self">${match}</span>`;
-        });
-        // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max)\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="built-in">${match}</span>`;
-        });
-        // FUNCTION
-        regex = /(<span class="keyword">def<\/span>)\s(\w+)\(/g;
-        innerHTML = innerHTML.replace(regex, '$1 <span class="function">$2</span>(');
-        // SPECIAL-NAMES
-        regex = /(<span class="function">)(__\w+__)(<\/span>)/g;
-        innerHTML = innerHTML.replace(regex, '$1<span class="special-names">$2</span>$3');
-        // KEYWORD-ARGUMENT
-        regex = /, (end|sep)=/g;
-        innerHTML = innerHTML.replace(regex, ', <span class="keyword-argument">$1</span>=');
-        codeBlock.innerHTML = innerHTML
-      });
-    });
-  </script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
