--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -7,177 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #CCCCCC 0%, #C9C9C9 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .string {
-      color: #6AAB73;
-    }
-
-    .string-bracket,
-    .string-esc,
-    .keyword {
-      color: #CF8E6D;
-    }
-
-    .self {
-      color: #94558D;
-    }
-
-    .string-bracket-inner {
-      color: #BCBEC4;
-    }
-
-    .number {
-      color: #2AACB8;
-    }
-
-    .comments {
-      color: #7A7E85;
-    }
-
-    .metadata {
-      color: #B3AE60;
-    }
-
-    .built-in {
-      color: #8888C6;
-    }
-
-    .function {
-      color: #56A8F5;
-    }
-
-    .special-names {
-      color: #B200B2;
-    }
-
-    .keyword-argument {
-      color: #AA4926;
-    }
-
-    ol {
-      counter-reset: list;
-      list-style: none;
-      padding-left: 0;
-      margin-bottom: 0;
-    }
-
-    ol li {
-      counter-increment: list;
-      position: relative;
-      padding-left: 1.2em;
-      padding-bottom: 1.2em;
-    }
-
-    ol li::before {
-      content: counter(list) ". ";
-      position: absolute;
-      left: 0;
-      color: #FFC000;
-      font-weight: bold;
-    }
-
-    .grey {
-      color: #BCBEC4;
-    }
-
-    .no-padding-bottom {
-      padding-bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/pt.css">
 </head>
 
 <body>
@@ -193,7 +23,7 @@
             class="hl-text">выводит в консоль меню</span>, <span class="hl-text">запрашивает ввод выбора с
             консоли</span>, затем <span class="hl-text">выводит в консоль результат работы выбора</span>. Учтите, что
           пользователь в качестве выбора может вписать число не в диапазоне
-          <code><span class="number"><b>1</b></span></code>-<code><span class="number"><b>3</b></span></code>.
+          <code class="python"><b>1</b></code>–<code class="python"><b>3</b></code>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -209,21 +39,22 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от
-            <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>23</b></span></code>
-            включительно</span> и <span class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь
-          может вписать число не в диапазоне
-          <code><span class="number"><b>0</b></span></code>-<code><span class="number"><b>23</b></span></code>.
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от <code
+              class="python"><b>0</b></code> до <code class="python"><b>23</b></code> включительно</span> и <span
+            class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь может вписать число не в
+          диапазоне <code class="python"><b>0</b></code>–<code class="python"><b>23</b></code>.
         </p>
         <p>Время суток следующее:
-          <br>— <span class="hl-text"><b>Ночь:</b></span> от <code><span class="number"><b>0</b></span></code> до
-          <code><span class="number"><b>6</b></span></code>.
-          <br>— <span class="hl-text"><b>Утро:</b></span> от <code><span class="number"><b>6</b></span></code> до
-          <code><span class="number"><b>12</b></span></code>.
-          <br>— <span class="hl-text"><b>День:</b></span> от <code><span class="number"><b>12</b></span></code> до
-          <code><span class="number"><b>18</b></span></code>.
-          <br>— <span class="hl-text"><b>Вечер:</b></span> от <code><span class="number"><b>18</b></span></code> до
-          <code><span class="number"><b>24</b></span></code>.
+        <ul>
+          <li><span class="hl-text"><b>Ночь:</b></span> от <code class="python"><b>0</b></code> до <code
+              class="python"><b>6</b></code>.</li>
+          <li><span class="hl-text"><b>Утро:</b></span> от <code class="python"><b>6</b></code> до <code
+              class="python"><b>12</b></code>.</li>
+          <li><span class="hl-text"><b>День:</b></span> от <code class="python"><b>12</b></code> до <code
+              class="python"><b>18</b></code>.</li>
+          <li><span class="hl-text"><b>Вечер:</b></span> от <code class="python"><b>18</b></code> до <code
+              class="python"><b>24</b></code>.</li>
+        </ul>
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -237,21 +68,24 @@
         <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> решили сделать акцию <span class="hl-text">"Накопи
             скидку"</span> для своих клиентов. Если клиент выполняет определённые условия, то он получает скидку.</p>
         <p>Условия следующие:
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>7</b></span></code> <span
-            class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>2%</b></span></code>.
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>14</b></span></code> <span
-            class="hl-text">дней подряд</span>, то получает ещё скидку
-          <code><span class="number"><b>3%</b></span></code>.
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>21</b></span></code> <span
-            class="hl-text">день подряд</span>, то получает ещё скидку
-          <code><span class="number"><b>5%</b></span></code>.
-          <br>— Если стоимость корзины клиента от <span class="number"><b>1000</b></span> <span class="hl-text">и
-            больше</span>, то получает ещё скидку <span class="number"><b>10%</b></span>.
-          <br>— Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает ещё
-          скидку <span class="number"><b>5%</b></span>.
+        <ul>
+          <li>Если клиент закупался в магазине на протяжении <code class="python"><b>7</b></code> <span
+              class="hl-text">дней
+              подряд</span>, то получает скидку <code class="python"><b>2%</b></code>.</li>
+          <li>Если клиент закупался в магазине на протяжении <code class="python"><b>14</b></code> <span
+              class="hl-text">дней
+              подряд</span>, то получает ещё скидку <code class="python"><b>3%</b></code>.</li>
+          <li>Если клиент закупался в магазине на протяжении <code class="python"><b>21</b></code> <span
+              class="hl-text">день
+              подряд</span>, то получает ещё скидку <code class="python"><b>5%</b></code>.</li>
+          <li>Если стоимость корзины клиента от <code class="python"><b>1000</b></code> <span class="hl-text">и
+              больше</span>, то получает ещё скидку <code class="python"><b>10%</b></code>.
+          </li>
+          <li>Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает ещё
+            скидку <code class="python"><b>5%</b></code>.</li>
+        </ul>
         </p>
         <p>Скидка действует только для следующей покупки и только с подтверждения клиентом.</p>
-        <br>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины клиента</span>,
           <span class="hl-text">количество дней непрерывной покупки</span>, <span class="hl-text">подтверждение
             положительного отзыва</span>. Затем программа <span class="hl-text">выводит в консоль сумму накопленной
@@ -316,13 +150,14 @@
           <span class="hl-text">выводит в консоль рекомендацию по перевозке</span>.
         </p>
         <p>Рекомендации следующие:
-          <br>— Рекомендуется доставка <span class="hl-text">автомобилем</span>, если расстояние менее
-          <code><span class="number"><b>100</b></span></code> км.
-          <br>— Рекомендуется доставка <span class="hl-text">грузовым автомобилем</span>, если расстояние от
-          <code><span class="number"><b>100</b></span></code> км до <code><span class="number"><b>1000</b></span></code>
-          км.
-          <br>— Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от
-          <code><span class="number"><b>1000</b></span></code> и более км.
+        <ul>
+          <li>Рекомендуется доставка <span class="hl-text">автомобилем</span>, если расстояние менее <code
+              class="python"><b>100</b></code> км.</li>
+          <li>Рекомендуется доставка <span class="hl-text">грузовым автомобилем</span>, если расстояние от <code
+              class="python"><b>100</b></code> км до <code class="python"><b>1000</b></code> км.</li>
+          <li>Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от <code
+              class="python"><b>1000</b></code> и более км.</li>
+        </ul>
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -333,31 +168,35 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли уровень освещённости (в
-            люксах)</span>, <span class="hl-text">температуру (в градусах Цельсия)</span>, <span
-            class="hl-text">влажность воздуха (в процентах)</span>, <span class="hl-text">уровень кислотности почвы
-            (pH)</span>, затем <span class="hl-text">выводит в консоль оценку условия жизни растения</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли уровень освещённости</span> (в
+          люксах), <span class="hl-text">температуру</span> (в градусах Цельсия), <span class="hl-text">влажность
+            воздуха</span> (в процентах), <span class="hl-text">уровень кислотности почвы</span> (pH), затем <span
+            class="hl-text">выводит в консоль оценку условия жизни растения</span>.</p>
 
         <p>Градация оценки:
-          <br>— <span class="hl-text"><b>Очень высокая:</b></span> все параметры в оптимальных границах.
-          <br>— <span class="hl-text"><b>Высокая:</b></span> <code><span class="number"><b>1</b></span></code> параметр
-          вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Средняя:</b></span> <code><span class="number"><b>2</b></span></code> параметра
-          вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Низкая:</b></span> <code><span class="number"><b>3</b></span></code> параметра
-          вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Очень низкая:</b></span> все параметры вне оптимальных границ.
+        <ul>
+          <li><span class="hl-text"><b>Очень высокая:</b></span> все параметры в оптимальных границах.</li>
+          <li><span class="hl-text"><b>Высокая:</b></span> <code class="python"><b>1</b></code> параметр вне оптимальных
+            границ.</li>
+          <li><span class="hl-text"><b>Средняя:</b></span> <code class="python"><b>2</b></code> параметра вне
+            оптимальных границ.</li>
+          <li><span class="hl-text"><b>Низкая:</b></span> <code class="python"><b>3</b></code> параметра вне оптимальных
+            границ.</li>
+          <li><span class="hl-text"><b>Очень низкая:</b></span> все параметры вне оптимальных границ.</li>
+        </ul>
         </p>
 
         <p>Оптимальные границы:
-          <br>— <span class="hl-text"><b>Уровень освещённости:</b></span>
-          <code><span class="number"><b>2000</b></span></code>-<code><span class="number"><b>10000 лк</b></span></code>.
-          <br>— <span class="hl-text"><b>Температура:</b></span>
-          <code><span class="number"><b>15</b></span></code>-<code><span class="number"><b>28°C</b></span></code>.
-          <br>— <span class="hl-text"><b>Влажность воздуха:</b></span>
-          <code><span class="number"><b>50</b></span></code>-<code><span class="number"><b>70%</b></span></code>.
-          <br>— <span class="hl-text"><b>Уровень кислотности почвы:</b></span>
-          <code><span class="number"><b>6</b></span></code>-<code><span class="number"><b>7 pH</b></span></code>.
+        <ul>
+          <li><span class="hl-text"><b>Уровень освещённости:</b></span> <code class="python"><b>2000</b></code>–<code
+              class="python"><b>10000 лк</b></code>.</li>
+          <li><span class="hl-text"><b>Температура:</b></span> <code class="python"><b>15</b></code>–<code
+              class="python"><b>28°C</b></code>.</li>
+          <li><span class="hl-text"><b>Влажность воздуха:</b></span> <code class="python"><b>50</b></code>–<code
+              class="python"><b>70%</b></code>.</li>
+          <li><span class="hl-text"><b>Уровень кислотности почвы:</b></span> <code class="python"><b>6</b></code>–<code
+              class="python"><b>7 pH</b></code>.</li>
+        </ul>
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -371,77 +210,6 @@
       </div>
     </div>
   </div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function (codeBlock, index) {
-        let innerHTML = codeBlock.innerHTML;
-        console.log(index, innerHTML);
-        // STRING
-        let regex = /(?<!\\)(f?"[^"\\]*(?:\\.[^"\\]*)*")/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        regex = /(?<!\\)(f?'[^'\\]*(?:\\.[^'\\]*)*')/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        // KEYWORD CLASS
-        regex = /(class)(?!=)/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORDS
-        const keywords = [
-          'def', 'for', 'in', 'while', 'and', 'or', 'not',
-          'if', 'elif', 'else', 'continue', 'break', 'try', 'with',
-          'as', 'except', 'finally', 'return', 'True', 'False', 'from', 'import'
-        ];
-        regex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'g');
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORD NUMBER
-        regex = /\b\d+(\.\d+)?/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="number">${match}</span>`;
-        });
-        // STRING-ESC
-        regex = /\\./g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string-esc">${match}</span>`;
-        });
-        // COMMENTS
-        regex = /(#.*$)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="comments">${match}</span>`;
-        });
-        // METADATA
-        regex = /^(\s*@\w+)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="metadata">${match}</span>`;
-        });
-        // SELF
-        regex = /\bself\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="self">${match}</span>`;
-        });
-        // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len)\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="built-in">${match}</span>`;
-        });
-        // FUNCTION
-        regex = /(<span class="keyword">def<\/span>)\s(\w+)\(/g;
-        innerHTML = innerHTML.replace(regex, '$1 <span class="function">$2</span>(');
-        // SPECIAL-NAMES
-        regex = /(<span class="function">)(__\w+__)(<\/span>)/g;
-        innerHTML = innerHTML.replace(regex, '$1<span class="special-names">$2</span>$3');
-        // KEYWORD-ARGUMENT
-        regex = /, (end|sep)=/g;
-        innerHTML = innerHTML.replace(regex, ', <span class="keyword-argument">$1</span>=');
-        codeBlock.innerHTML = innerHTML
-      });
-    });
-  </script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
